# WEB-DEV-NOTES

./: .deepsource.toml  .gitignore  .gitmodules  README.md  index.html  left.html  right.html
00-4-all-time/: right.html
00-4-all-time/0-test-prep/: files  index.html  right.html
00-4-all-time/02-catchall/: right.html
00-4-all-time/1-Data-Structures/: right.html
00-4-all-time/Useful-Tools-repos/: right.html
00-4-all-time/_0-Random-Repo/: right.html
00-4-all-time/a-A-October-Shared-Folder/: README.md  github-profiles.txt  right.html
00-4-all-time/bash-files/: .profile  restoreeetc.sh  right.html  setexec.sh  ubuntu-packages.md
00-4-all-time/dev-enviornment/: Dev-Enviorment-Info-macros.xlsm  Dev-Enviorment-Info.xlsx  ubuntu-log.md
00-4-all-time/general-ref/: right.html
00-4-all-time/important/: credentials-f1d473-2020-Dec-04--22_46_10.csv
00-4-all-time/submodules/: right.html
00-4-all-time/useful-commands/: All commands sorted by votes.md  Use regular expressions - Visual Studio.md  change-extension.bat  messy.txt  right.html  sed - 20 examples to remove  delete characters from a file.md  setup.md  useful-commands-2.txt  useful-commands.txt  useful-websites.txt  useful3.txt
00-4-all-time/vscode/: Extensions-December.txt  extension-list-jan.txt  right.html  vscode-optimizations.md  vscode-settings.md
00-4-all-time/z-PROJECTS/: right.html
02-future-unsorted/: right.html
02-future-unsorted/2020.11.badReads-main/: package-lock.json  right.html
02-future-unsorted/W07D2-solutions/: 01_bubble_sort.js  02_selection_sort.js  03_insertion_sort.js  04_merge_sort.js  right.html  (+1 more)
02-mod1-a-2--/: right.html
03-module-3/: right.html
04-module-4/: right.html
05-module-5/: right.html
06-module-6/: right.html
07-utilities/: right.html
09-Personal-Exploration/: right.html
09-Personal-Exploration/Dynamic Time Warping/dtwcpp/dtw-1-master/: CMakeLists.txt  README.md  package.xml  right.html
09-Personal-Exploration/Dynamic Time Warping/dtwcpp/dtw-1-master/include/: right.html
09-Personal-Exploration/Dynamic Time Warping/dtwcpp/dtw-1-master/include/dtw/: dtw.h  right.html
09-Personal-Exploration/Dynamic Time Warping/dtwcpp/dtw-1-master/src/: dtw.cpp  main.cpp  right.html
Directory-Structure/: right.html
(+45423 files in other folders)
